Retours mobiles - Diminution de la taille des logos - On resserre les phrases concernant les tarifs - Fix du problème du logo écrasé - Tentative de fix du problème du dark mode

--- a/app/components/Header/MobileNavbar.module.css
+++ b/app/components/Header/MobileNavbar.module.css
@@ -45,8 +45,8 @@
 
   .logoMobile {
     display: block;
-    height: 7.5rem;
-    width: 100%;
+    height: 7rem;
+    width: auto;
   }
 
   .mobileMenu ul {
