--- a/app/page.module.css
+++ b/app/page.module.css
@@ -59,6 +59,7 @@
     flex-direction: column;
     align-items: center;
     padding-block: 2rem;
+    gap: 0.25rem;
   }
   .artistInfo {
     display: none;
